--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     </head>
     <body>
         
-        <script src="app.js" async defer></script>
+        <script src="quiz4.js" async defer></script>
     </body>
 </html>
